--- a/build.xml
+++ b/build.xml
@@ -27,9 +27,25 @@
             </fileset>
         </copy>
     </target>
+    <target name="jar">
+        <mkdir dir="build/jar"/>
+        <copy todir="bin">
+            <fileset dir="" includes="plugin.yml">
+                <exclude name="**/*.classpath"/>
+            </fileset>
+        </copy>
+        <jar destfile="build/jar/Gimme.jar" basedir="bin">
+        </jar>
+    </target>
     <target name="clean">
         <delete dir="bin"/>
     </target>
+    <target depends="clean" name="cleanall"/>
+    <target name="jar">
+        <mkdir dir="build/jar"/>
+        <copy todir="bin">
+            <fileset dir="" includes="plugin.yml">
+                <exclude name="**/*.classpath"/>
     <target depends="clean" name="cleanall"/>
     <target depends="build-subprojects,build-project" name="build"/>
     <target name="build-subprojects"/>
