--- a/build.xml
+++ b/build.xml
@@ -34,18 +34,12 @@
                 <exclude name="**/*.classpath"/>
             </fileset>
         </copy>
-        <jar destfile="build/jar/Gimme.jar" basedir="bin">
+        <jar destfile="build/jar/CraftBird.jar" basedir="bin">
         </jar>
     </target>
     <target name="clean">
         <delete dir="bin"/>
     </target>
-    <target depends="clean" name="cleanall"/>
-    <target name="jar">
-        <mkdir dir="build/jar"/>
-        <copy todir="bin">
-            <fileset dir="" includes="plugin.yml">
-                <exclude name="**/*.classpath"/>
     <target depends="clean" name="cleanall"/>
     <target depends="build-subprojects,build-project" name="build"/>
     <target name="build-subprojects"/>
